styles/layout.css
/*
  Media Queries:
    - https://developer.mozilla.org/en-US/docs/Web/CSS/Media_Queries/Using_media_queries
    - display-mode - https://developer.mozilla.org/en-US/docs/Web/CSS/@media/display-mode

  Screen
    - @viewport - https://developer.mozilla.org/en-US/docs/Web/CSS/@viewport
    - concepts - https://developer.mozilla.org/en-US/docs/Web/CSS/Viewport_concepts
    - `display-mode` - https://developer.mozilla.org/en-US/docs/Web/CSS/@media/display-mode
    - Designing websites for iPhone X - https://webkit.org/blog/7929/designing-websites-for-iphone-x/
    - Sizes - https://docs.adobe.com/content/help/en/target/using/experiences/vec/mobile-viewports.html
    - Adaptivity and Layout - https://developer.apple.com/design/human-interface-guidelines/ios/visual-design/adaptivity-and-layout/

  Generic Layouts:
    - Containment - https://w3c.github.io/csswg-drafts/css-contain/
    - Columns - https://developer.mozilla.org/en-US/docs/Web/CSS/Layout_cookbook/Column_layouts

  Orientation:
    - https://developer.mozilla.org/en-US/docs/Web/API/CSS_Object_Model/Managing_screen_orientation
    - https://developer.mozilla.org/en-US/docs/Web/CSS/@media/orientation
*/
@media (orientation: landscape) {
  body {
    flex-direction: row;
  }
}

@media (orientation: portrait) {
  body {
    flex-direction: column;
  }
}

/*
  Flexbox:
    - https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Flexbox
    - https://css-tricks.com/snippets/css/a-guide-to-flexbox/

  CSS Grid:
    - https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout
    - https://css-tricks.com/snippets/css/a-guide-to-flexbox/
*/
*, ::before, ::after
  /* https://stackoverflow.com/questions/7327326/what-is-the-difference-between-before-and-before */
  { box-sizing: inherit }
html, body {
  /*
    - https://dev.to/tepythai/why-100vw-causes-horizontal-scrollbar-4nlm
    - https://polypane.app/blog/strategies-for-dealing-with-horizontal-overflows/
    -  https://allthingssmitty.com/2020/05/11/css-fix-for-100vh-in-mobile-webkit/
  */
/* TODO: REFACTOR */
  min-width: 100vw;
  min-width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
  min-width: fill-available;          /* https://caniuse.com/?search=fill-available */

  min-height: 100vh;
//  min-height: -moz-available;          /* WebKit-based browsers will ignore this. */
//  min-height: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
//  min-height: fill-available;          /* https://caniuse.com/?search=fill-available */
}

/* boxing - https://www.paulirish.com/2012/box-sizing-border-box-ftw/ */
html { box-sizing: border-box }
body { display: flex }
body > * { /* all immediate children of <body> */
  width: var(--max-width);
  max-width: var(--max-width);
}
body > header { }
body > nav {
  top: 0;
  z-index: 10;
  position: sticky;
  max-height: 90vh;
  overflow-y: auto;
}
body > a[rel=help] { /* skip link */
  left: 0;
  z-index: 11;
  width: fit-content;
  padding: var(--line-height);
}
body > main { }
body > aside { }
body > footer {
  top: 100vh;
  position: sticky;
}

